--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.10",
         "phpunit/phpunit": "^11"
-    }
+    },
+  "require": {
+    "ext-ctype": "*"
+  }
 }
